--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body {
   /*background-color: DarkGreen;*/
-  background-image: url('Backgrounds/clouds1.jpg');
+  background-image: url('clouds1.jpg');
 }
 
 table, tr, th{
