--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,33 @@
 body {
   /*background-color: DarkGreen;*/
-  background-image: url('Backgrounds/clouds1.jpg');
+  background-image: url('clouds1.jpg');
+  color:black;
+  padding-left: 50px;
+  padding-right: 50px;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 
 table, tr, th{
    border: 1px solid black;
+}
+
+h1 {
+  margin-top: 2px;
+  margin-bottom: 5px;
+}
+
+.smallMargins {
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+
+.container {
+  display:flex;
+}
+.container > div1{
+  width:65%;
+}
+.container > div2{
+  width:45%;
 }
