--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body {
   /*background-color: DarkGreen;*/
-  background-image: url('Assets/perfect_cell.jpg');
+  background-image: url('Assets/abzu.jpeg');
   background-repeat: no-repeat;
   background-position: center;
   background-attachment: fixed;
