--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ body {
   background-size: cover;
 
 
-  color:coral;
+  color:#C36241; /*coral*/
   padding-left: 50px;
   padding-right: 50px;
   padding-top: 10px;
