--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ body {
   padding-bottom: 10px;
 }
 
-table, tr, th{
+tr, th, td{
    border: 1px solid black;
 }
 
@@ -39,5 +39,5 @@ h1 {
   width:65%;
 }
 .container > div2{
-  width:45%;
+  width:35%;
 }
