--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,9 @@ body { /*GLlobal variables*/
   padding-right: 50px;
   padding-top: 10px;
   padding-bottom: 10px;
+
+  font-family:monospace;
+  font-size: 15px;
 }
 
 table, td{ /*Table outline*/
